--- a/app/css/style.css
+++ b/app/css/style.css
@@ -108,5 +108,35 @@
  
 }
 
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
 
+.modal-content {
+  padding: 20px;
+  border-radius: 8px;
+  position: relative;
+  max-width: 700px;
+  width: 100%;
+  height: 80vh;
+}
+
+.modal-close {
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
 
