--- a/app/css/style.css
+++ b/app/css/style.css
@@ -104,6 +104,22 @@
   display: flex;
   animation: scroll 20s linear infinite;
 }
+/* Adjust animation for mobile screens */
+@media (max-width: 768px) {
+  @keyframes scroll {
+    0% {
+      transform: translateX(70%);
+    }
+    100% {
+      transform: translateX(-350%); /* Adjust to ensure full scroll on smaller screens */
+    }
+  }
+
+  .infinite-scroll {
+    animation: scroll 20s linear infinite; /* Increase speed for mobile */
+  }
+}
+
 
 .modal-backdrop {
   position: fixed;
@@ -129,7 +145,7 @@
 
 .modal-close {
   position: absolute;
-  top: 30px;
+  top: -30px;
   right: 10px;
   background: none;
   border: none;
